Fixed typing issues and syntax

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,12 @@
     "experimentalDecorators": true,
     "outDir": "dist",
     "declaration": true,
+    "typeRoots": [
+      "node_modules/@types",
+      "typings"
+    ],
     "types": [
+      "node-forge",
       "mocha",
       "node"
     ]
