--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.5",
+    "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "codecov": "^3.5.0",
     "del-cli": "^3.0.0",
