--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-typescript": "^7.6.0",
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
+    "@types/mailparser": "^2.4.0",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.5",
     "@types/uuid": "^3.4.5",
