--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,20 +9,9 @@
     "experimentalDecorators": true,
     "outDir": "dist",
     "declaration": true,
-    "typeRoots": [
-      "node_modules/@types",
-      "typings"
-    ],
-    "types": [
-      "node-forge",
-      "mocha",
-      "node",
-      "uuid"
-    ]
+    "typeRoots": ["node_modules/@types", "typings"],
+    "types": ["node-forge", "mailparser", "mocha", "node", "nodemailer", "uuid"]
   },
 
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "exclude": ["node_modules", "dist"]
 }
