--- a/package.json
+++ b/package.json
@@ -13,46 +13,48 @@
   "author": "Aaron Huggins",
   "license": "MIT",
   "dependencies": {
-    "mailparser": "^2.7.1",
-    "node-forge": "^0.9.0",
-    "uuid": "^3.3.3"
+    "mailparser": "^2.7.7",
+    "node-forge": "^0.9.1",
+    "nodemailer": "^6.4.6",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.0",
-    "@babel/core": "^7.6.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.6.0",
-    "@babel/preset-typescript": "^7.6.0",
-    "@istanbuljs/nyc-config-typescript": "^0.1.3",
-    "@types/mailparser": "^2.4.0",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.7.5",
-    "@types/uuid": "^3.4.5",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "codecov": "^3.5.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-typescript": "^7.9.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/mailparser": "^2.7.2",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.13.4",
+    "@types/nodemailer": "^6.4.0",
+    "@types/uuid": "^7.0.3",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "codecov": "^3.6.5",
     "del-cli": "^3.0.0",
     "dts-bundle-webpack": "^1.0.2",
-    "eslint": "^6.3.0",
-    "eslint-config-standard-jsdoc": "^9.2.0",
-    "eslint-config-standard-with-typescript": "^9.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsdoc": "^15.9.2",
-    "eslint-plugin-node": "^9.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard-jsdoc": "^9.3.0",
+    "eslint-config-standard-with-typescript": "^16.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsdoc": "^24.0.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "gulp": "^4.0.2",
-    "gulp-mocha": "^7.0.1",
-    "gulp-shell": "^0.7.1",
+    "gulp-mocha": "^7.0.2",
+    "gulp-shell": "^0.8.0",
     "jsdoc-babel": "^0.5.0",
-    "jsdoc-to-markdown": "^5.0.1",
-    "mocha": "^6.2.0",
+    "jsdoc-to-markdown": "^5.0.3",
+    "mocha": "^7.1.2",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^14.1.1",
-    "source-map-support": "^0.5.13",
-    "ts-loader": "^6.1.0",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.6.2",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9"
+    "nyc": "^15.0.1",
+    "source-map-support": "^0.5.19",
+    "ts-loader": "^7.0.1",
+    "ts-node": "^8.9.1",
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
