--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "got": "^11.0.3",
     "gulp": "^4.0.2",
     "gulp-mocha": "^7.0.2",
     "gulp-shell": "^0.8.0",
