Several updates - Communication to drummond-certified AS2 works - Openssl command execution improvements - Better typing - AS2Crypto.verify broken

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -4,5 +4,5 @@
   "require": ["ts-node/register", "source-map-support/register"],
   "reporter": ["spec"],
   "full-trace": true,
-  "bail": true
+  "bail": false
 }
