--- a/package.json
+++ b/package.json
@@ -8,49 +8,28 @@
   },
   "keywords": [
     "as2",
-    "RFC4130"
+    "RFC4130",
+    "as2 protocol",
+    "mdn"
   ],
   "author": "Aaron Huggins",
   "license": "MIT",
   "dependencies": {
     "mailparser": "^2.7.7",
     "node-forge": "^0.9.1",
-    "nodemailer": "^6.4.6",
-    "uuid": "^8.0.0"
+    "nodemailer": "^6.4.6"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-typescript": "^7.9.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/mailparser": "^2.7.2",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.4",
     "@types/node-forge": "^0.9.3",
     "@types/nodemailer": "^6.4.0",
-    "@types/uuid": "^7.0.3",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "codecov": "^3.6.5",
-    "del-cli": "^3.0.0",
     "dts-bundle-webpack": "^1.0.2",
-    "eslint": "^6.8.0",
-    "eslint-config-standard-jsdoc": "^9.3.0",
-    "eslint-config-standard-with-typescript": "^16.0.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsdoc": "^24.0.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "got": "^11.0.3",
     "gulp": "^4.0.2",
-    "gulp-mocha": "^7.0.2",
     "gulp-shell": "^0.8.0",
-    "jsdoc-babel": "^0.5.0",
-    "jsdoc-to-markdown": "^5.0.3",
     "mocha": "^7.1.2",
-    "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^15.0.1",
     "source-map-support": "^0.5.19",
     "ts-loader": "^7.0.2",
