--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Aaron Huggins",
   "license": "MIT",
   "dependencies": {
-    "emailjs-mime-parser": "^2.0.7",
+    "@nhs-llc/emailjs-mime-parser": "^2.1.0",
     "mailparser": "^2.7.7",
     "node-forge": "^0.9.1",
     "nodemailer": "^6.4.6"
