--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "nodemailer": "^6.4.6"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-typescript": "^7.10.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/mailparser": "^2.7.2",
     "@types/mocha": "^7.0.2",
@@ -30,6 +34,8 @@
     "dts-bundle-webpack": "^1.0.2",
     "gulp": "^4.0.2",
     "gulp-shell": "^0.8.0",
+    "jsdoc-babel": "^0.5.0",
+    "jsdoc-to-markdown": "^6.0.1",
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
     "source-map-support": "^0.5.19",
