--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "experimentalDecorators": true,
     "outDir": "dist",
     "declaration": true,
+    "allowSyntheticDefaultImports": true,
     "typeRoots": ["node_modules/@types", "typings"],
     "types": ["node-forge", "mailparser", "mocha", "node", "nodemailer"]
   },
