--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "libas2",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "Implementation of the AS2 protocol as presented in RFC 4130 and related RFCs",
-  "main": "index.js",
+  "main": "dist/core.js",
+  "types": "dist/core.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "prepublishOnly": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,7 +21,6 @@
   "license": "MIT",
   "dependencies": {
     "@nhs-llc/emailjs-mime-parser": "^2.1.0",
-    "mailparser": "^2.7.7",
     "node-forge": "^0.9.1",
     "nodemailer": "^6.4.6"
   },
