--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "types": ["node-forge", "mailparser", "mocha", "node", "nodemailer"]
   },
 
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "test"]
 }
