Progress on MDN support

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "libas2",
+  "alternateName": "node-libas2",
   "version": "0.1.6",
   "description": "Implementation of the AS2 protocol as presented in RFC 4130 and related RFCs",
   "main": "dist/core.js",
