--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "outDir": "dist",
     "declaration": true,
     "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "typeRoots": ["node_modules/@types", "typings"],
     "types": ["node-forge", "mailparser", "mocha", "node", "nodemailer"]
   },
