--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "libas2",
   "alternateName": "node-libas2",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Implementation of the AS2 protocol as presented in RFC 4130 and related RFCs",
   "main": "dist/core.js",
   "types": "dist/core.d.ts",
   "files": [
-    "dist"
+    "dist/**"
   ],
   "scripts": {
-    "prepublishOnly": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublishOnly": "gulp compile",
+    "test": "gulp mocha:coverage"
   },
   "keywords": [
     "as2",
