--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "typeRoots": ["node_modules/@types", "typings"],
-    "types": ["node-forge", "mailparser", "mocha", "node", "nodemailer"]
+    "types": ["node-forge", "mailparser", "mocha", "node", "nodemailer", "pkijs/build"]
   },
 
   "exclude": ["node_modules", "dist", "test"]
