--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "libas2",
   "alternateName": "node-libas2",
-  "version": "0.1.8-pre",
+  "version": "0.2.0",
   "description": "Implementation of the AS2 protocol as presented in RFC 4130 and related RFCs",
   "main": "dist/core.js",
   "types": "dist/core.d.ts",
@@ -20,6 +20,11 @@
     "edi"
   ],
   "author": "Aaron Huggins",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ahuggins-nhs/node-libas2"
+  },
+  "homepage": "https://github.com/ahuggins-nhs/node-libas2#readme",
   "license": "MIT",
   "dependencies": {
     "@nhs-llc/emailjs-mime-parser": "^2.1.0",
@@ -34,8 +39,10 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-typescript": "^7.10.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/luxon": "^1.24.1",
     "@types/mailparser": "^2.7.2",
     "@types/mocha": "^7.0.2",
+    "@types/nock": "^11.1.0",
     "@types/node": "^13.13.4",
     "@types/node-forge": "^0.9.3",
     "@types/nodemailer": "^6.4.0",
@@ -45,7 +52,9 @@
     "gulp-shell": "^0.8.0",
     "jsdoc-babel": "^0.5.0",
     "jsdoc-to-markdown": "^6.0.1",
+    "luxon": "^1.24.1",
     "mocha": "^7.1.2",
+    "nock": "^13.0.0",
     "nyc": "^15.0.1",
     "source-map-support": "^0.5.19",
     "ts-loader": "^7.0.2",
