--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "mocha": "^7.1.2",
     "nock": "^13.0.0",
     "nyc": "^15.0.1",
+    "sinon": "^9.0.2",
     "source-map-support": "^0.5.19",
     "ts-loader": "^7.0.2",
+    "ts-mock-imports": "^1.3.0",
     "ts-node": "^8.9.1",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
