Add newLine optimization

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "newLine": "lf",
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
