Add support for older decryption schemes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "libas2",
   "alternateName": "node-libas2",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Implementation of the AS2 protocol as presented in RFC 4130 and related RFCs",
   "main": "dist/core.js",
   "types": "dist/core.d.ts",
@@ -46,6 +46,7 @@
     "@types/node": "^13.13.4",
     "@types/node-forge": "^0.9.3",
     "@types/nodemailer": "^6.4.0",
+    "@types/ping": "^0.2.0",
     "@types/pkijs": "0.0.4",
     "dts-bundle-webpack": "^1.0.2",
     "gulp": "^4.0.2",
@@ -56,6 +57,7 @@
     "mocha": "^7.1.2",
     "nock": "^13.0.0",
     "nyc": "^15.0.1",
+    "ping": "^0.2.3",
     "sinon": "^9.0.2",
     "source-map-support": "^0.5.19",
     "ts-loader": "^7.0.2",
