--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/gulp": "^4.0.6",
     "@types/luxon": "^1.24.4",
     "@types/mailparser": "^2.7.3",
     "@types/mocha": "^8.0.3",
