--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dist/**"
   ],
   "scripts": {
-    "prepublishOnly": "gulp compile",
+    "prepack": "gulp compile",
+    "postpack": "gulp clean",
     "test": "gulp mocha:coverage"
   },
   "keywords": [
