--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "ts-loader": "^8.0.3",
     "ts-mock-imports": "^1.3.0",
     "ts-node": "^9.0.0",
-    "typescript": "^3.9.7",
+    "typedoc": "^0.19.0",
+    "typescript": "^4.0.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
