Conform to prettier standard

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,15 +12,7 @@
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "typeRoots": ["node_modules/@types", "typings"],
-    "types": [
-      "node-forge",
-      "mailparser",
-      "mocha",
-      "node",
-      "nodemailer",
-      "pkijs/build",
-      "ping"
-    ]
+    "types": ["node-forge", "mailparser", "mocha", "node", "nodemailer", "pkijs/build", "ping"]
   },
 
   "exclude": ["node_modules", "dist", "test", "gulpfile.ts"]
